Melhorias no css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 </head>
 <body>
   <div class="contagem">
-
+    <p> Faltam </p>
+    <p class="dias"></p>
+    <p>para o Natal!</p>
   </div>
   <div class="fonte">
     <p>Para conferir a referência original visite o post:
     </p>
-    <a href="https://www.instagram.com/p/CW_WBqONdld/?utm_source=ig_web_copy_link"><strong>Código</strong>Fonte</a>
+    <a href="https://www.instagram.com/p/CW_WBqONdld/?utm_source=ig_web_copy_link">
+     <img src="cropped-codigofonte-2022.png" alt="Logo Código Fonte">
+    </a>
+    <br>
   </div>
   <script src="script.js"></script>
 </body>
